# Aether_OS_Nexus_Core_v.0.1

./: Aether_OS_Nexus_Core_v.0.1.txt  Cargo.toml  FILE_MANAGER_VNODE.md  README.md  SHELL_VNODE.md  ZIP_STRUCTURE_REVIEW.md
AetherOS/current/aetheros/: Cargo.toml
AetherOS/current/aetheros/kernel/: Cargo.toml
AetherOS/current/aetheros/kernel/src/: lib.rs  main.rs  syscall.rs
AetherOS/current/aetheros/kernel/src/arch/x86_64/: boot.rs  gdt.rs  idt.rs  paging.rs
AetherOS/current/aetheros/kernel/src/drivers/: mod.rs  serial.rs
AetherOS/current/aetheros/kernel/src/ipc/: mailbox.rs
AetherOS/current/aetheros/kernel/src/memory/: frame_allocator.rs  mod.rs  page_allocator.rs
AetherOS/current/aetheros/kernel/src/task/: mod.rs  scheduler.rs  tcb.rs
AetherOS/current/aetheros/vnode/dns-resolver/: Cargo.toml  vnode.yml
AetherOS/current/aetheros/vnode/dns-resolver/src/: main.rs
AetherOS/current/aetheros/vnode/file-manager/: Cargo.toml  vnode.yml
AetherOS/current/aetheros/vnode/file-manager/src/: main.rs
AetherOS/current/aetheros/vnode/init-service/: Cargo.toml  vnode.yml
AetherOS/current/aetheros/vnode/init-service/src/: main.rs
AetherOS/current/aetheros/vnode/mail-service/: Cargo.toml  vnode.yml
AetherOS/current/aetheros/vnode/mail-service/src/: main.rs
AetherOS/current/aetheros/vnode/model-runtime/: Cargo.toml  vnode.yml
AetherOS/current/aetheros/vnode/model-runtime/src/: main.rs
AetherOS/current/aetheros/vnode/net-bridge/: Cargo.toml
AetherOS/current/aetheros/vnode/net-bridge/src/: main.rs
AetherOS/current/aetheros/vnode/shell/src/: main.rs
AetherOS/current/aetheros/vnode/socket-api/: vnode.yml
AetherOS/current/aetheros/vnode/socket-api/src/: main.rs
AetherOS/current/aetheros/vnode/vfs/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: VFS_VNODE.md  mail-service-vnode.md
docs/services/: dns-resolver.md
docs/specs/: core-documentation-v0.1.0.txt  overview-v0.1.txt
kernel/: error.rs  syscall.rs
src/: ipc.rs  kernel.rs  lib.rs  syscall.rs
src/ipc/: dns_ipc.rs  file_manager_ipc.rs  init_ipc.rs  mail_ipc.rs  model_runtime_ipc.rs  net_ipc.rs  shell_ipc.rs  socket_ipc.rs  vfs_ipc.rs  vnode.rs
src/swarm_engine/: nexus_net_transport.rs
tests/: integration_ipc_test.rs
vnode/dns-resolver/: Cargo.toml  vnode.yml
vnode/file-manager/: Cargo.toml  vnode.yml
vnode/init-service/: Cargo.toml  vnode.yml
vnode/mail-service/: Cargo.toml  vnode.yml
vnode/model-runtime/: Cargo.toml  (+1 more)
(+37 files in other folders)
