[package]
name = "aetheros-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
spin = "0.9"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
uart_16550 = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.dev.package."*"]
opt-level = 0

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
correctness = "warn"
