[package]
name = "aetheros-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
bootloader-api = { version = "0.11.0", optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
uart_16550 = { version = "0.2.0" }
x86_64 = "0.14.2"
spin = "0.9.2"
linked_list_allocator = "0.10.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
# Default feature to be enabled by default (e.g. for building without bootloader_api)
default = []
# Feature to enable bootloader_api, which is used by the kernel entry point
bootloader_api_enabled = ["dep:bootloader-api"]
